Aggiornamento icone e App

--- a/MIIDMApp-master/manifest.json
+++ b/MIIDMApp-master/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "Miidm App",
-	"name": "MiidmApp",
+	"short_name": "Tech Seum",
+	"name": "Di Maggio Tech Seum",
 	"icons": [{
 			"src": "res/512x512.png",
 			"type": "image/png",
