--- a/MIIDMApp-master/manifest.json
+++ b/MIIDMApp-master/manifest.json
@@ -15,7 +15,7 @@
 			"sizes": "192x192"
 		}],
 	"start_url": "index.php",
-	"background_color": "#f1c40e",
+	"background_color": "#34495e",
 	"display": "standalone",
 	"theme_color": "#34495e"
 }
